2014-04-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/menu.php
	  godmode/agentes/planned_downtime.editor.php
	  operation/menu.php: Changed 'Scheduled downtime'
	from Administration to Operation.
	Added help in scheduled downtime form.
	Changed 'Update manager' from Operation->Extensions
	to Administration->Setup.

2014-04-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components.php,
	godmode/modules/manage_network_components_form.php,
	godmode/agentes/configurar_agente.php,
	include/functions_snmp_browser.php,
	operation/snmpconsole/snmp_browser.php: implemented the feature to
	create a network component from snmp browser.
	
	Incident: #684

2014-04-01  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php, operation/agentes/exportdata.php:
	fixed the export data from modules with string data.
	
	Incident: #707

2014-04-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_networkmap.php: Modified the L2
	network interfaces.

2014-03-31  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_networkmap.php: Updated the function
	"networkmap_generate_dot" to fix a regex and delete the
	central node if the L2 network interfaces is true.

	* operation/agentes/estado_generalagente.php: Fixed
	some regex.

2014-03-31  Vanessa Gil <vanessa.gil@artica.es>
	
	* pandoradb.oracle.sql
	  pandoradb.postgreSQL.sql
	  pandoradb.sql
	  extras/pandoradb_migrate_5.0_to_5.1.mysql.sql
	  extras/pandoradb_migrate_5.0_to_5.1.oracle.sql
	  extras/pandoradb_migrate_5.0_to_5.1.postgreSQL.sql
	  godmode/snmpconsole/snmp_alert.php: Add more actions
	to snmp alerts.

2014-03-31  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: fixed the status color
	of the percentile bars and bubbles.
	
	Incident: #555

2014-03-31  Miguel de Dios <miguel.dedios@artica.es>
	